# python-lambda-aws-xray

./: .gitignore  Makefile  README.md  build_layer.sh  pyproject.toml
tests/: Dockerfile  app.py  conftest.py  test_sitecustomize.py
