[project]
name = "python-lambda-aws-xray"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-xray-sdk>=2.14.0",
    "wrapt>=1.17.2",
]

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "pytest>=8.4.1",
    "toml2json>=0.1.0",
]
